# swagger/swagger.json
@@ -4339,6 +4339,179 @@
                     }
                 }
             }
+        },
+        "/unidad_medida/": {
+            "get": {
+                "tags": [
+                    "unidad_medida"
+                ],
+                "description": "get UnidadMedida",
+                "operationId": "UnidadMedidaController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.UnidadMedida"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "unidad_medida"
+                ],
+                "description": "create UnidadMedida",
+                "operationId": "UnidadMedidaController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for UnidadMedida content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UnidadMedida"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.UnidadMedida"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/unidad_medida/{id}": {
+            "get": {
+                "tags": [
+                    "unidad_medida"
+                ],
+                "description": "get UnidadMedida by id",
+                "operationId": "UnidadMedidaController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.UnidadMedida"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "unidad_medida"
+                ],
+                "description": "update the UnidadMedida",
+                "operationId": "UnidadMedidaController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for UnidadMedida content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UnidadMedida"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.UnidadMedida"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "unidad_medida"
+                ],
+                "description": "delete the UnidadMedida",
+                "operationId": "UnidadMedidaController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -4650,6 +4823,13 @@
                 },
                 "ProveedorId": {
                     "$ref": "#/definitions/models.Proveedor"
+                },
+                "UnidadMedidaId": {
+                    "$ref": "#/definitions/models.UnidadMedida"
+                },
+                "Valor": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         },
@@ -4781,6 +4961,23 @@
                     "type": "string"
                 }
             }
+        },
+        "models.UnidadMedida": {
+            "title": "UnidadMedida",
+            "type": "object",
+            "properties": {
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "Peso": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
         }
     },
     "tags": [
@@ -4883,6 +5080,10 @@
         {
             "name": "tipo_modalidad",
             "description": "TipoModalidadController operations for TipoModalidad\n"
+        },
+        {
+            "name": "unidad_medida",
+            "description": "UnidadMedidaController operations for UnidadMedida\n"
         }
     ]
 }
